Create a ExoPlayerAdapter and test it with the new     PlaybackTransportControlGlue.
    Test: Manually

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,10 @@
             android:exported="true"
             android:theme="@style/Theme.Example.LeanbackDetails"/>
         <activity
+            android:name=".app.details.DetailViewExampleWithVideoBackgroundExoPlayerActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Example.LeanbackDetails"/>
+        <activity
             android:name=".app.cards.CardExampleActivity"
             android:exported="true"
             android:theme="@style/Theme.Example.LeanbackBrowse"/>
