--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,10 +58,6 @@
             android:exported="true"
             android:theme="@style/Theme.Example.LeanbackDetails"/>
         <activity
-            android:name=".app.details.DetailViewExampleWithVideoBackgroundExoPlayerActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Example.LeanbackDetails"/>
-        <activity
             android:name=".app.cards.CardExampleActivity"
             android:exported="true"
             android:theme="@style/Theme.Example.LeanbackBrowse"/>
@@ -80,8 +76,15 @@
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|layoutDirection"
             android:launchMode="singleTask"
             android:resizeableActivity="true"
-            android:supportsPictureInPicture="true"
-            />
+            android:supportsPictureInPicture="true"/>
+        <activity
+            android:name=".app.media.VideoExampleWithExoPlayerActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Example.Leanback"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|layoutDirection"
+            android:launchMode="singleTask"
+            android:resizeableActivity="true"
+            android:supportsPictureInPicture="true"/>
         <activity
             android:name=".app.media.MusicExampleActivity"
             android:exported="true"
