--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'android-O'
-    buildToolsVersion '26.0.0-rc2'
+    compileSdkVersion 'android-26'
+    buildToolsVersion '26.0.0'
 
     defaultConfig {
         applicationId "android.support.v17.leanback.supportleanbackshowcase"
-        minSdkVersion 17
-        targetSdkVersion 'O'
+        minSdkVersion 21
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -35,5 +35,5 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r2.2.0'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
+    compile 'com.google.android.libraries.tv:companionlibrary:0.1'
 }
