--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,19 +106,8 @@
                     android:path="/startapp" />
             </intent-filter>
         </activity>
-        <activity android:name=".app.rows.VideoPlaybackActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data
-                    android:scheme="rowsnewapi"
-                    android:host="android.support.v17.leanback.supportleanbackshowcase"
-                    android:path="/resumevideo" />
-            </intent-filter>
-        </activity>
         <activity
-            android:name=".app.rows.ScreenChannelRowActivity">
+            android:name=".app.rows.VideoPlaybackActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.BROWSABLE" />
