--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "android.support.v17.leanback.supportleanbackshowcase"
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -22,7 +22,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:recyclerview-v7:26.0.0-beta2"
+    compile "com.android.support:recyclerview-v7:+"
     compile "com.android.support:leanback-v17:+"
     compile "com.android.support:appcompat-v7:+"
 
@@ -35,5 +35,5 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r2.2.0'
 
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
-    compile 'com.android.support:support-tv-provider:26.0.0-beta2'
+    compile 'com.android.support:support-tv-provider:+'
 }
