--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,13 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'com.android.support:support-tv-provider:+'
+
+    compile "android.arch.lifecycle:runtime:1.0.0-alpha5"
+    compile "android.arch.lifecycle:extensions:1.0.0-alpha5"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha5"
+
+    compile "android.arch.persistence.room:runtime:1.0.0-alpha5"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha5"
+
+    testCompile "android.arch.persistence.room:testing:1.0.0-alpha5"
 }
