--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,17 +17,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion rootProject.buildToolsVersion
     defaultConfig {
-        applicationId 'com.example.android.persistence'
-        minSdkVersion 21
-        targetSdkVersion 26
+        applicationId 'com.android.leanback.showcase'
+        minSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         debug {
             minifyEnabled false
@@ -43,57 +42,52 @@ android {
     }
     productFlavors {
     }
-
     lintOptions {
         abortOnError false
     }
 
+    defaultConfig {
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
+    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:design:' + rootProject.supportLibVersion
-    compile 'com.android.support:cardview-v7:' + rootProject.supportLibVersion
-    compile 'com.android.support:recyclerview-v7:' + rootProject.supportLibVersion
-    compile 'android.arch.lifecycle:extensions:' + rootProject.archLifecycleVersion
-    compile 'android.arch.persistence.room:runtime:' + rootProject.archRoomVersion
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:design:' + rootProject.supportLibVersion
+    implementation 'com.android.support:cardview-v7:' + rootProject.supportLibVersion
+    implementation 'com.android.support:recyclerview-v7:' + rootProject.supportLibVersion
+    implementation 'android.arch.lifecycle:extensions:' + rootProject.archLifecycleVersion
+    implementation 'android.arch.persistence.room:runtime:' + rootProject.archRoomVersion
     annotationProcessor "android.arch.lifecycle:compiler:" + rootProject.archLifecycleVersion
     annotationProcessor "android.arch.persistence.room:compiler:" + rootProject.archRoomVersion
-
     testCompile 'junit:junit:4.12'
-
     // Testing-only dependencies
     androidTestCompile 'com.android.support.test:runner:' + rootProject.runnerVersion
     androidTestCompile 'com.android.support.test:rules:' + rootProject.rulesVersion
     androidTestCompile 'com.android.support.test.espresso:espresso-core:' + rootProject.espressoVersion
-
     androidTestCompile 'com.android.support.test.espresso:espresso-contrib:' + rootProject.espressoVersion
-
     // Force usage of dependencies in the test app, since it is internally used by the runner module.
     androidTestCompile 'com.android.support:design:' + rootProject.supportLibVersion
     androidTestCompile 'com.android.support:recyclerview-v7:' + rootProject.supportLibVersion
-
-    compile 'com.android.support:leanback-v17:' + rootProject.supportLibVersion
-    compile 'com.android.support:appcompat-v7:' + rootProject.supportLibVersion
-
-    compile 'com.android.support:preference-v7:'+ rootProject.supportLibVersion
-    compile 'com.android.support:preference-leanback-v17:' + rootProject.supportLibVersion
-    compile 'com.android.support:preference-v14:' + rootProject.supportLibVersion
-
-    compile "com.google.code.gson:gson:2.8.1"
-    compile "com.android.support:palette-v7:" + rootProject.supportLibVersion
-    compile 'com.google.android.exoplayer:exoplayer:r2.2.0'
-
-    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
-    compile 'com.android.support:support-tv-provider:' + rootProject.supportLibVersion
-
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-
-    implementation "com.google.dagger:dagger:2.11"
-    implementation "com.google.dagger:dagger-android:2.11"
-    implementation "com.google.dagger:dagger-android-support:2.11"
-
+    implementation 'com.android.support:leanback-v17:' + rootProject.supportLibVersion
+    implementation 'com.android.support:appcompat-v7:' + rootProject.supportLibVersion
+    implementation 'com.android.support:preference-v7:' + rootProject.supportLibVersion
+    implementation 'com.android.support:preference-leanback-v17:' + rootProject.supportLibVersion
+    implementation 'com.android.support:preference-v14:' + rootProject.supportLibVersion
+    implementation 'com.google.code.gson:gson:2.8.1'
+    implementation "com.android.support:palette-v7:" + rootProject.supportLibVersion
+    implementation 'com.google.android.exoplayer:exoplayer:2.6.1'
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation 'com.android.support:support-tv-provider:' + rootProject.supportLibVersion
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.google.dagger:dagger:2.11'
+    implementation 'com.google.dagger:dagger-android:2.11'
+    implementation 'com.google.dagger:dagger-android-support:2.11'
     annotationProcessor "com.google.dagger:dagger-android-processor:2.11"
     annotationProcessor "com.google.dagger:dagger-compiler:2.11"
 }
